Updating portafolio content

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                         and secure cloud solutions.
                     </p>
                     <p>
-                        My approach combines technical excellence with a deep understanding of business requirements. I believe in writing clean, maintainable code and following best practices in every aspect of development, from frontend to infrastructure.
+                        My approach combines technical excellence with a deep understanding of business requirements. I believe in writing clean, maintainable code and following best practices in every aspect of development, from backend to infrastructure.
                     </p>
                     <p>
                         When I'm not coding, you'll find me exploring new technologies, contributing to open-source projects, and continuously learning to stay at the forefront of the rapidly evolving tech landscape.
@@ -94,8 +94,8 @@
                         <p>Automating deployments and infrastructure management with Terraform</p>
                     </div>
                     <div class="highlight-card">
-                        <h3>Full Stack Development</h3>
-                        <p>Building complete solutions from frontend to backend</p>
+                        <h3>Backend Development</h3>
+                        <p>Building stable and reliable backend solutions</p>
                     </div>
                 </div>
             </div>
@@ -121,22 +121,11 @@
                 <div class="skill-category">
                     <h3>Backend Development</h3>
                     <ul class="skill-list">
-                        <li>Python, JavaScript, Node.js</li>
+                        <li>Python, Java</li>
                         <li>RESTful APIs & GraphQL</li>
                         <li>Database Design (PostgreSQL, MySQL, DynamoDB)</li>
                         <li>Microservices Architecture</li>
                         <li>API Security & Authentication</li>
-                    </ul>
-                </div>
-
-                <div class="skill-category">
-                    <h3>Frontend Development</h3>
-                    <ul class="skill-list">
-                        <li>HTML5, CSS3, JavaScript (ES6+)</li>
-                        <li>React, Vue.js</li>
-                        <li>Responsive Design & Mobile-First</li>
-                        <li>Web Performance Optimization</li>
-                        <li>Accessibility (WCAG 2.1)</li>
                     </ul>
                 </div>
 
